change log messages to comments, update manifest

--- a/tablight/manifest.json
+++ b/tablight/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "TabLight",
   "version": "1.0",
-  "description": "Highlights already open tabs, hovering over a link.",
+  "description": "Hovering over a link will highlight already open tab instances.",
   "icons": {
     "48": "icons/tl-48.png"
   },
