--- a/tablight/manifest.json
+++ b/tablight/manifest.json
@@ -8,7 +8,8 @@
   },
   "permissions": [
     "tabs",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "background": {
     "scripts": ["background.js"]
@@ -18,5 +19,9 @@
       "matches": ["<all_urls>"],
       "js": ["tablight.js"]
     }
-  ]
+  ],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  }
 }
